# bulldog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ec2_ubuntu_setup.sh
analysis/converter/: README.md  convert.py  rank.py
analysis/notebook/: Eval-h2h.ipynb  cfr_profile.ipynb  expl.ipynb  inspection.ipynb
config/engine/: README.md  builder_r0_dl.json  builder_r0_for_test.json  builder_r0_upoker-p_nlh2_100bb.json  builder_r0_upoker-p_nlh2_150bb.json  builder_r0_upoker-p_nlh2_200bb.json  builder_r0_upoker-p_nlh2_30bb.json  builder_r0_upoker-p_nlh2_65bb.json  builder_r1_upoker-p_nlh2_200bb_bigpot.json  builder_r2_dummy_nlh2_200bb.json  builder_r2_upoker-p_nlh2_200bb_0pot.json  builder_r2_upoker-p_nlh2_200bb_bigpot.json  builder_r2_upoker-p_nlh2_200bb_midpot.json  builder_r3_upoker-p_nlh2_200bb_0pot.json  builder_r3_upoker-p_nlh2_200bb_bigpot.json  builder_r3_upoker-p_nlh2_200bb_midpot.json  cfr_r0_dummy.json  cfr_r0_for_test.json  cfrs_r0_60cores.json  cfrs_r0_dl.json  cfrs_train-p_r0.json  cfrv_r0.json  cfrv_r1.json  cfrv_r1_upoker-p_bigpot.json  cfrv_r2.json  cfrv_r2_bigpot.json  cfrv_r2_upoker-p_0pot.json  cfrv_r2_upoker-p_bigpot.json  cfrv_r2_upoker-p_midpot.json  cfrv_r3.json  cfrv_r3_upoker-p_0pot.json  cfrv_r3_upoker-p_bigpot.json  cfrv_r3_upoker-p_midpot.json  engine_dummy_blueprint.json  engine_evalh2h_r123.json  engine_random_action.json  engine_slumbot_r123.json  engine_upoker-p_sgs_r123.json  engine_upoker_1bp.json  engine_upoker_xbp.json  (+12 more)
config/games/: holdem.nolimit.2p.10_20.game  holdem.nolimit.2p.game  holdem.nolimit.3p.game  holdem.nolimit.6p.game  leduc.limit.2p.game  nlh2_100bb.game  nlh2_150bb.game  nlh2_30bb.game  nlh2_65bb.game
modules/acpc_server/: CMakeLists.txt  bm_run_matches.c  bm_server.c  bm_server.config  bm_widget.c
modules/agent/: CMakeLists.txt  README.md
modules/agent/src/: acpc_connector.cpp  acpc_connector.hpp  agent.cpp  base_connector.hpp  basic_controller.cpp  bulldog_controller.cpp  bulldog_controller.hpp  bulldog_sdk.cpp  bulldog_sdk.h  constants.hpp  dealer.c  engine_eval.cpp  server_constants.h  slumbot_connector.cpp  slumbot_connector.hpp  webserver.cpp
modules/agent/test/: test_agent.cpp  test_sdk.cpp
modules/core/: CMakeLists.txt  README.md
modules/core/include/bulldog/: card_util.h  core_util.hpp  game.h  game_util.h  logger.hpp  matrix.h  net.h  rng.h  table_util.h
modules/core/src/: card_util.cpp  evalHandTables  game.c  game_util.cpp  net.c  rng.c  table_util.cpp
modules/core/src/lib/pokerstove/peval/: CardSet.cpp
modules/core/test/: test_card_util.cpp  test_core.cpp  test_table_util.cpp
modules/engine/: CMakeLists.txt  README.md  subgame.example
modules/engine/docs/: buckets.md
modules/engine/include/bulldog/: engine.h
modules/engine/src/: abstract_game.cpp  abstract_game.h  action_abs.cpp  action_abs.h  action_chooser.hpp  ag_builder.hpp  bucket.cpp  bucket.h  bucket_pool.hpp  bucket_reader.hpp  build_buckets.cpp  builder.hpp  card_abs.hpp  cfr.cpp  cfr.h  cfr_command.hpp  cfr_param.h  cfr_state.h  cfr_worker.cpp  cfr_worker.h  cfr_worker_scalar.cpp  check_kernel_size.cpp  check_strategy.cpp  emd.cpp  emd.h  engine.cpp  engine_util.cpp  engine_util.h  eval-h2h.cpp  hand_belief.cpp  hand_belief.h  hand_kernel.hpp  kmeans.cpp  kmeans.h  node.cpp  node.h  profiling.h  pstl.hpp  rnba_kernel.hpp  strategy.cpp  (+8 more)
modules/engine/test/: test_abstraction.cpp  test_cfr.cpp  test_engine.cpp  test_engine_util.cpp  test_hand_kernel.cpp  test_rnba_kernel.cpp
scripts/: README.md  alice.sh  bob.sh  cmake.sh  debug_quickmatch.sh  example_player  play_match.pl  quickmatch.sh  setup_remote_ec2.sh
